--- a/index.html
+++ b/index.html
@@ -48,15 +48,7 @@
     </section>
     <section id="contact">
         <h2>Kontakt</h2>
-        <form>
-            <label for="name">Imię:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <label for="message">Wiadomość:</label>
-            <textarea id="message" name="message" required></textarea>
-            <button type="submit">Wyślij</button>
-        </form>
+        <p>Możesz skontaktować się ze mną przez email: <a href="mailto:twojemail@example.com">twojemail@example.com</a></p>
     </section>
     <footer>
         <p>&copy; 2024 [Twoje Imię]. Wszystkie prawa zastrzeżone.</p>
