--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <section id="skills">
         <h2>Umiejętności</h2>
-        <ul>
+        <ul class="skills-list">
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
